--- a/src/main/webapp/CSS/common.css
+++ b/src/main/webapp/CSS/common.css
@@ -1,15 +1,10 @@
 body {
-    background-color: aquamarine;
-}
-
-h1, h2, h3, h4, h5, h6,
-p, label, input, button, textarea, :hover {
-    color: darkblue;
+    background-image: linear-gradient(lightblue, white, blue);
 }
 
 input[type=submit], button {
-    background-color: aquamarine;
-    border: 2px solid darkblue;
+    background-color: lightskyblue;
+    border: 2px solid black;
     padding: 16px 32px;
     text-decoration: none;
     margin: 4px 2px;
