--- a/src/main/webapp/CSS/common.css
+++ b/src/main/webapp/CSS/common.css
@@ -14,3 +14,8 @@ input[type=submit], button {
 input[type=submit]:hover, button:hover {
     background-color: white;
 }
+
+.error {
+    font-size: large;
+    color: red;
+}
